tests/fail/elaboration/record-proj/head-not-record.fathom
//~ exit-code = 1

let _ : Bool = Bool.foo;
let _ : Bool = {x=false}.x.foo;

{}
